--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <h3>Adidas Yeezy 350</h3>
                             <del>R$ 1999,00</del>
                             <strong>R$1499,00</strong>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta molestias quam et cupiditate voluptatem aspernatur ipsum inventore neque totam ex, harum possimus numquam nisi aperiam? </p>
+                            <p>Lorem ipsum dolor sit, amet consectetur elit. Soluta molestias quam et cupiditate voluptatem aspernatur ipsum inventore neque totam ex, harum possimus numquam nisi aperiam? </p>
                             <button class="add-to-cart">Adicionar ao carrinho</button>
 
                         </div>
